Fixed horizontal scrollbar showing even when not needed

--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,7 @@
     margin-left: 175px;
     margin-top: 30px;
     margin-right: 25px;
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 
 .content {
